kuber/parser_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parser-deployment
  labels:
    app: parser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parser
  strategy:
    type: Recreate
  template:
    metadata:
      name: parser-pod
      labels:
        app: parser
    spec:
      containers:
        - args:
            - -f
            - "/data/golden/main/universities_1_100.scv"
            - -s
          image: test_image:latest
          name: parser-pod
          resources:
            limits:
              memory: "512Mi"
          volumeMounts:
            - mountPath: /app/data/runs
              name: parser-volume
      restartPolicy: Always
      volumes:
        - name: parser-volume
          persistentVolumeClaim:
            claimName: parser-volume
