kuber/splash_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: splash-deployment
  labels:
    app: splash
spec:
  replicas: 5
  selector:
    matchLabels:
      app: splash
  strategy:
    type: Recreate
  template:
    metadata:
      name: splash-pod
      labels:
        app: splash
    spec:
      containers:
        - args:
            - --max-timeout
            - "300"
            - --slots
            - "5"
            - --maxrss
            - "4000"
            - --verbosity
            - "1"
          image: whalebothelmsman/supervised-splash:latest
          name: splash
          ports:
            - containerPort: 8050
          resources:
            limits:
              memory: "1Gi"
          volumeMounts:
            - mountPath: /etc/splash/proxy-profiles
              name: splash-volume
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: splash-volume
          persistentVolumeClaim:
            claimName: splash-volume
            readOnly: true
