kuber/splash0-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: splash-service
spec:
  ports:
    - port: 8080
