kuber/splash_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: splash-service
spec:
  ports:
    - port: 8050
  selector:
    app: splash
status:
  loadBalancer: {}
