kuber/haproxy_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
spec:
  ingressClassName: haproxy
  rules:
    - host: localhost
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: splash-service
                port:
                  number: 8050
